--- a/RestAssuredAutomation/pom.xml
+++ b/RestAssuredAutomation/pom.xml
@@ -26,6 +26,15 @@
 		    <artifactId>json-simple</artifactId>
 		    <version>1.1.1</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/io.rest-assured/json-schema-validator -->
+		<dependency>
+		    <groupId>io.rest-assured</groupId>
+		    <artifactId>json-schema-validator</artifactId>
+		    <version>5.1.1</version>
+		    <scope>test</scope>
+		</dependency>
+				
 				
 	  
 	  
